<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.hueic.hueicprojectdoanthanhnien.activity.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/imgHueIC"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:src="@mipmap/h" />
    </LinearLayout>
    <!--TaiKhoan-->
    <TextView
        android:id="@+id/tvTaiKhoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="5dp"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:id="@+id/edTaiKhoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTaiKhoan"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/hint_user_name"/>
    <!--MatKhau-->
    <TextView
        android:id="@+id/tvMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edTaiKhoan"
        android:layout_marginTop="5dp"
        android:text="@string/pass_word"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:id="@+id/edMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMatKhau"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:hint="@string/hint_pass_word"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/white"
        />
    <!--GhiNho-->
    <CheckBox
        android:id="@+id/chkGhiNho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edMatKhau"
        android:layout_marginTop="5dp"
        android:text="@string/save_infor"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <!--DangNhap-->
    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkGhiNho"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/greenButtonLogin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <!--DangKy-->
    <Button
        android:id="@+id/btnDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDangNhap"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/grayButtonCreateAccount"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <!--QuenMatKhau-->
    <TextView
        android:id="@+id/tvQuenMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>
